--- a/src/edu/illinois/ncsa/cline/voyager/speeddatabase.properties
+++ b/src/edu/illinois/ncsa/cline/voyager/speeddatabase.properties
@@ -1,7 +1,7 @@
 #db.user=root
-#db.password=Sterio0RG
+#db.password=
 USER=cline
-PASSWORD=~reallyhard~
+PASSWORD=
 DRIVER=com.mysql.jdbc.Driver
 #URL=jdbc:mysql://141.142.227.150:3306/speed
 #SOLRURL=http://141.142.227.150:8983/solr/derived/
